footer form subscribe

--- a/index.html
+++ b/index.html
@@ -396,6 +396,21 @@
             </li>
           </ul>
         </div>
+        <div class="box-newsletter">
+          <p class="join-us">Zapisz się do newslettera</p>
+          <form name="subscribe-form" class="subscribe-form" autocomplete="off">
+            <label for="subscribe-email-form ">
+              <input class="subscribe-email-form" type="email" name="email" placeholder="E-mail" id="subscribe-email-form "
+              required/>
+            </label>
+
+            <button class="button button-sign-in" type="submit">
+              <svg class="sign-in" width="130" height="30">
+                <use href="./images/icons.svg#sign-in"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- div dla okno modalnego -->
