--- a/portfolio.html
+++ b/portfolio.html
@@ -299,28 +299,43 @@
 
         <div class="box-join-us">
           <p class="join-us">DOŁĄCZ DO NAS</p>
-          <div class="social-footer">
-            <p class="elipse footer" href="#" target="_blank">
+          <ul class="social-footer">
+            <li class="elipse footer" href="#" target="_blank">
               <svg class="social-icon" width="20px" height="20px">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg>
-            </p>
-            <p class="elipse footer" href="#" target="_blank">
+            </li>
+            <li class="elipse footer" href="#" target="_blank">
               <svg class="social-icon" width="20" height="20px">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg>
-            </p>
-            <p class="elipse footer" href="#" target="_blank">
+            </li>
+            <li class="elipse footer" href="#" target="_blank">
               <svg class="social-icon" width="20" height="20px">
                 <use href="./images/icons.svg#icon-facebook-1-1"></use>
               </svg>
-            </p>
-            <p class="elipse footer" href="#" target="_blank">
+            </li>
+            <li class="elipse footer" href="#" target="_blank">
               <svg class="social-icon" width="20" height="20px">
                 <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
-            </p>
-          </div>
+            </li>
+          </ul>
+        </div>
+        <div class="box-newsletter">
+          <p class="join-us">Zapisz się do newslettera</p>
+          <form name="subscribe-form" class="subscribe-form" autocomplete="off">
+            <label for="subscribe-email-form ">
+              <input class="subscribe-email-form" type="email" name="email" placeholder="E-mail" id="subscribe-email-form "
+              required/>
+            </label>
+
+            <button class="button button-sign-in" type="submit">
+              <svg class="sign-in" width="130" height="30">
+                <use href="./images/icons.svg#sign-in"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
