--- a/index.html
+++ b/index.html
@@ -400,8 +400,14 @@
           <p class="join-us">Zapisz się do newslettera</p>
           <form name="subscribe-form" class="subscribe-form" autocomplete="off">
             <label for="subscribe-email-form ">
-              <input class="subscribe-email-form" type="email" name="email" placeholder="E-mail" id="subscribe-email-form "
-              required/>
+              <input
+                class="subscribe-email-form"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                id="subscribe-email-form "
+                required
+              />
             </label>
 
             <button class="button button-sign-in" type="submit">
@@ -416,6 +422,41 @@
     <!-- div dla okno modalnego -->
     <div data-modal class="is-hidden backdrop">
       <div class="modal">
+        <form name="order-form" class="order-form" autocomplete="off">
+          <h2>Zostaw swoje dane w formularzu poniżej</h2>
+          <label for="name-order" class="label-order">
+            <div>Imie</div>
+            <input name="name" class="name" type="text" id="name-order" required />
+            <svg width="18" height="18">
+            <use href="./images/icons.svg#form-name"></use>
+            </svg>
+          </label>
+          
+
+          <label for="phone-number-order" class="label-order">
+            <div>Telefon</div>
+            <input name="phone-number" class="phone-number" type="tel" id="phone-number" required />
+            <svg width="18" height="18">
+            <use href="./images/icons.svg#form-tel"></use>
+            </svg>
+          </label>
+
+          <label for="email-order" class="label-order">
+            <div>Email</div>
+            <input name="email-order" class="email-order" type="email" id="email-order" required />
+            <svg width="18" height="18">
+              <use href="./images/icons.svg#form-mail"></use>
+            </svg>
+          </label>
+
+          <label for="comment-order" class="label-order">
+            <div>Komentarz</div>
+            <textarea name="comment-order" class="comment-order" type="text" id="comment-order" value="" placeholder="Wprowadź tekst"></textarea>
+            
+          </label>
+
+
+        </form>
         <button data-modal-close class="btn-close">
           <svg width="11" height="11">
             <use href="./images/icons.svg#icon-Vector"></use>
