--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 
           <label for="phone-number-order" class="label-order">
             <div>Telefon</div>
-            <input name="phone-number" class="phone-number" type="tel" id="phone-number" required />
+            <input name="phone-number" class="phone-number" type="tel" id="phone-number-order" required />
             <svg width="18" height="18">
             <use href="./images/icons.svg#form-tel"></use>
             </svg>
@@ -452,8 +452,22 @@
           <label for="comment-order" class="label-order">
             <div>Komentarz</div>
             <textarea name="comment-order" class="comment-order" type="text" id="comment-order" value="" placeholder="Wprowadź tekst"></textarea>
-            
+          
           </label>
+          <label class="label-check">
+            <input class="hidden-checkbox" type="checkbox" name="client-terms-accept" />
+            <div class="custom-checkbox">
+              <svg width="14" height="12">
+                <!-- delikatne zmniejszenie, aby ikona zmiescila sie w ramce -->
+                <use href="./images/icons.svg#form-confirm"></use>
+              </svg>
+            </div>
+            <span
+              >Oświadczam iż akceptuję <a href="#">Regulamin</a> i
+              <a href="#">Politykę Prywatności</a>.</span
+            >
+          </label>
+          <button type="submit" class="btn-form-send">Wyślij</button>
 
 
         </form>
