--- a/index.html
+++ b/index.html
@@ -426,24 +426,41 @@
           <h2>Zostaw swoje dane w formularzu poniżej</h2>
           <label for="name-order" class="label-order">
             <div>Imie</div>
-            <input name="name" class="name" type="text" id="name-order" required />
+            <input
+              name="name"
+              class="name"
+              type="text"
+              id="name-order"
+              required
+            />
             <svg width="18" height="18">
-            <use href="./images/icons.svg#form-name"></use>
+              <use href="./images/icons.svg#form-name"></use>
             </svg>
           </label>
-          
 
           <label for="phone-number-order" class="label-order">
             <div>Telefon</div>
-            <input name="phone-number" class="phone-number" type="tel" id="phone-number-order" required />
+            <input
+              name="phone-number"
+              class="phone-number"
+              type="tel"
+              id="phone-number-order"
+              required
+            />
             <svg width="18" height="18">
-            <use href="./images/icons.svg#form-tel"></use>
+              <use href="./images/icons.svg#form-tel"></use>
             </svg>
           </label>
 
           <label for="email-order" class="label-order">
             <div>Email</div>
-            <input name="email-order" class="email-order" type="email" id="email-order" required />
+            <input
+              name="email-order"
+              class="email-order"
+              type="email"
+              id="email-order"
+              required
+            />
             <svg width="18" height="18">
               <use href="./images/icons.svg#form-mail"></use>
             </svg>
@@ -451,11 +468,21 @@
 
           <label for="comment-order" class="label-order">
             <div>Komentarz</div>
-            <textarea name="comment-order" class="comment-order" type="text" id="comment-order" value="" placeholder="Wprowadź tekst"></textarea>
-          
+            <textarea
+              name="comment-order"
+              class="comment-order"
+              type="text"
+              id="comment-order"
+              value=""
+              placeholder="Wprowadź tekst"
+            ></textarea>
           </label>
           <label class="label-check">
-            <input class="hidden-checkbox" type="checkbox" name="client-terms-accept" />
+            <input
+              class="hidden-checkbox"
+              type="checkbox"
+              name="client-terms-accept"
+            />
             <div class="custom-checkbox">
               <svg width="14" height="12">
                 <!-- delikatne zmniejszenie, aby ikona zmiescila sie w ramce -->
@@ -468,8 +495,6 @@
             >
           </label>
           <button type="submit" class="btn-form-send">Wyślij</button>
-
-
         </form>
         <button data-modal-close class="btn-close">
           <svg width="11" height="11">
