form label and hoover changes

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                 type="email"
                 name="email"
                 placeholder="E-mail"
-                id="subscribe-email-form "
+                id="subscribe-email-form"
                 required
               />
             </label>
@@ -425,7 +425,7 @@
         <form name="order-form" class="order-form" autocomplete="off">
           <h2>Zostaw swoje dane w formularzu poniżej</h2>
           <label for="name-order" class="label-order">
-            <div>Imie</div>
+            Imie
             <input
               name="name"
               class="name"
@@ -439,7 +439,7 @@
           </label>
 
           <label for="phone-number-order" class="label-order">
-            <div>Telefon</div>
+            Telefon
             <input
               name="phone-number"
               class="phone-number"
@@ -453,7 +453,7 @@
           </label>
 
           <label for="email-order" class="label-order">
-            <div>Email</div>
+            Email
             <input
               name="email-order"
               class="email-order"
@@ -467,7 +467,7 @@
           </label>
 
           <label for="comment-order" class="label-order">
-            <div>Komentarz</div>
+            Komentarz
             <textarea
               name="comment-order"
               class="comment-order"
@@ -485,7 +485,7 @@
             />
             <div class="custom-checkbox">
               <svg width="14" height="12">
-                <!-- delikatne zmniejszenie, aby ikona zmiescila sie w ramce -->
+              
                 <use href="./images/icons.svg#form-confirm"></use>
               </svg>
             </div>
